// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders 1`] = `
<H1>
  <InnerText
    style={
      Object {
        "backgroundSize": "auto",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundSize": "auto",
            "color": "#48484D",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H1>
`;

exports[`H2 renders 1`] = `
<H2>
  <InnerText
    style={
      Object {
        "backgroundRepeat": "repeat",
        "backgroundSize": "auto",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundRepeat": "repeat",
            "backgroundSize": "auto",
            "color": "#48484D",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H2>
`;

exports[`H3 renders 1`] = `
<H3>
  <InnerText
    style={
      Object {
        "backgroundSize": "100% 100%",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundSize": "100% 100%",
            "color": "#48484D",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H3>
`;

exports[`Link renders 1`] = `
<Link>
  <InnerText
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundSize": "cover",
            "color": "#48484D",
            "flexDirection": "row",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Link>
`;

exports[`Monospace renders 1`] = `
<Monospace>
  <InnerText
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundSize": "cover",
            "color": "#48484D",
            "flexDirection": "row",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Monospace>
`;

exports[`Subtitle renders 1`] = `
<Subtitle>
  <InnerText
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "flex": 1,
        "overflowX": "hidden",
        "overflowY": "auto",
        "transform": Array [
          Object {
            "translateZ": 0,
          },
        ],
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "backgroundSize": "cover",
            "color": "#48484D",
            "flex": 1,
            "overflowX": "hidden",
            "overflowY": "auto",
            "transform": Array [
              Object {
                "translateZ": 0,
              },
            ],
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Subtitle>
`;

exports[`Title renders 1`] = `
<Title>
  <InnerText
    style={
      Object {
        "touchAction": "none",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundSize": "cover",
            "color": "#48484D",
            "touchAction": "none",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Title>
`;
